# TheAutonomousRobot

./: README.md  intrinsic_param_14May.txt  my_camera_setup.sh
asclinic-system/: README.md
asclinic-system/catkin_ws/src/asclinic_pkg/: CMakeLists.txt  package.xml
asclinic-system/catkin_ws/src/asclinic_pkg/launch/: amr.launch  amr3200.launch  encoder_data_collection.launch  inner_loop.launch  outer_loop.launch  square_path_test.launch  square_path_test_v2.launch
asclinic-system/catkin_ws/src/asclinic_pkg/msg/: AmrPose.msg  MotorAngularVelocityPWM.msg  MotorRotationAngle.msg  ServoPulseWidth.msg  TransformationMatrix.msg
asclinic-system/catkin_ws/src/asclinic_pkg/msg/amr_msgs/: MotorsRotAngle.msg  MotorsVoltage.msg  Voltage.msg
asclinic-system/catkin_ws/src/asclinic_pkg/msg/sensor_msgs/: Encoder.msg
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/amr/: amr.cpp  amr_constants.h
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/amr/amr_architecture/: amr_architecture.h
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/pca9685/: pca9685_constants.h
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/pololu_smc_g2/: pololu_smc_g2_internal_para.h
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/pololu_smc_g2_encoder/: pololu_smc_g2_encoder.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/trajectories_copy/: S0_D2.csv
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/wh_trajectories/: D1_R1_2.csv  D1_R2.csv  R1_S0.csv  S0_D1.csv  S0_D1_.csv  S0_D2.csv
asclinic-system/catkin_ws/src/asclinic_pkg/src/drivers/src/wh_trajectories copy/: R1_S0.csv  S0_D1_.csv
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/: ProximitySensor.cpp  SquarePath.csv  encoder_subscriber.cpp  get_path_csvFile.py  motor_controller_sample.cpp  motor_dynamics.cpp  odometry_estimator.cpp  pose_controller.cpp  timer_monitor.cpp  trajectory_track_controller.cpp  trajectory_track_controller_v22.cpp  trajectory_track_controller_v2_copy.cpp  trajectory_track_controller_v3.cpp  transitPath.csv
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/encoder_monitor_trigger/: enc_monitor_4_motor_ctl.cpp  enc_monitor_4_odom_ctl.cpp  encoder_monitor_r.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/functional_test/: ref_pwm_servo_publish.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/main/: camera_monitor.py  motor_controller.cpp  motor_controller_v2.cpp  motor_dynamics.cpp  pose_estimator_fusion_v22.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/main/_not_use/: pose_estimator_odom.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/main/encoder_monitor/: encoder_monitor_l.cpp  encoder_monitor_r.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/backup_versions/encoder_monitor_3200/: enc_monitor_4_motor_ctl_3200.cpp  enc_monitor_l_3200.cpp  enc_monitor_l_channel_b.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/backup_versions/encoder_monitor_trigger/: enc_monitor_4_odom_ctl.cpp  encoder_monitor_r.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/backup_versions/encoder_monitor_trigger/backup_20210506_worked/: enc_monitor_4_motor_ctl.cpp  encoder_monitor_l.cpp  pololu_smc_g2_encoder.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/older_versions/20210420/: encoder_reader.cpp  motor_dynamics.cpp  timer_monitor.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/older_versions/20210428/: [old]_encoder_monitor.cpp  encoder_monitor.cpp  motor_dynamics_[old].cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/older_versions/__/: motor_controller.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/miscellaneous/testing/pwm_test/: pwm_single_motor.cpp  pwm_w_timer_test.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/old/: servo_controller.cpp  trajectory_track_controller.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/path_planning/: get_path_csvFile.py  trajectory_track_controller.cpp  transitPath.csv
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/unknown/: loading_mechanism.cpp  motion_planning.cpp  servo_motor.cpp
asclinic-system/catkin_ws/src/asclinic_pkg/src/nodes/v2/: motion_planning_v2_copy.cpp
catkin_ws/src/asclinic_pkg/: CMakeLists.txt
catkin_ws/src/asclinic_pkg/launch/: 2nd_square_path_test_v2.launch  amr3.launch  amr_final_odom.launch  amr_final_vel_lim.launch  cam.launch  encoder_data_collection.launch  encoder_monitor.launch
catkin_ws/src/asclinic_pkg/launch/functional_test/: servo.launch
catkin_ws/src/asclinic_pkg/launch/launch_test/: test.launch
catkin_ws/src/asclinic_pkg/msg/: MotorAngularVelocity.msg  pathCommand.msg
catkin_ws/src/asclinic_pkg/msg/amr_msgs/: MotorsAngVelocity.msg  Pose2DWithCovariance.msg
catkin_ws/src/asclinic_pkg/msg/geometry_msgs/: Pose.msg
catkin_ws/src/asclinic_pkg/msg/sensor_msgs/: Velocity.msg
catkin_ws/src/asclinic_pkg/src/drivers/src/amr/: amr.h  amr_constants copy.h  amr_constants.h
catkin_ws/src/asclinic_pkg/src/drivers/src/math/: maths_constants.h
catkin_ws/src/asclinic_pkg/src/drivers/src/trajectories_copy/: R1_S0.csv  (+2 more)
catkin_ws/src/asclinic_pkg/src/nodes/: MotionPlanHeader.h  SquarePath.csv  get_path_csvFile.py  get_path_csvFile_v2.py  motion_planning.cpp  motion_planning_v2.cpp  motion_planning_v2_copy.cpp  motion_planning_v3.cpp  motor_controller.cpp  plannedPath.csv  trajectory_track_controller_v2.cpp  warehouse_spec.csv
catkin_ws/src/asclinic_pkg/src/nodes/encoder_monitor_trigger/: encoder_monitor_l.cpp
catkin_ws/src/asclinic_pkg/src/nodes/functional_test/: ref_ang_vel_publish.cpp  ref_pwm_publish.cpp
catkin_ws/src/asclinic_pkg/src/nodes/main/: pose_estimator_cam.py  pose_estimator_fusion_v2.cpp  timer_monitor.cpp
catkin_ws/src/asclinic_pkg/src/nodes/old/: pose_estimator_fusion.cpp
catkin_ws/src/asclinic_pkg/src/nodes/path_planning/: warehouse_specification.h
catkin_ws/src/asclinic_pkg/src/nodes/v2/: trajectory_track_controller_v2_copy.cpp
(+46 files in other folders)
